--- a/part-1/index.html
+++ b/part-1/index.html
@@ -18,6 +18,7 @@
 
 <!-- add script tags for your components here -->
 <script src="FirstComponent.js" type="text/jsx"></script>
+<script src="NamedComponent.js" type="text/jsx"></script>
 <script src="index.js" type="text/jsx"></script>
 
 </body>
